# battleship-game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/app/migrations/: 0001_initial.py  0002_delete_userstats.py
backend/backend/: asgi.py  settings.py  urls.py
backend/static/css/: style.css
backend/templates/: auth.html  dashboard.html  game.html
cpp-server/: battleship_server.cpp  game.cpp  game.hpp  lobby.cpp  lobby.hpp  player.hpp
